typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode11.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode11.ts:2:20
  |
2 | var v = function f(eval) {
  |                    ^^^^

